--- a/css/main.css
+++ b/css/main.css
@@ -21,12 +21,12 @@
 4.0 - Elements: styling for bare/generic HTML elements 
         - Forms
         - Lists
-        - Media
-        - Tables
         - Typography: Headings, Paragraphs, Blockquotes, Anchors
 5.0 - Objects: class-based selectors which define undecorated design patterns, building blocks
         - Framework
 6.0 - Components: specific designed components
+		- Layout
+		- Typography
         - Buttons
         - Header
         - Navigation 
@@ -37,16 +37,18 @@
 
 --------------------------------------------------------------*/
 
-* {
-	color: #FFF;
-	font-family: 'Nunito Sans', sans-serif;
-	line-height: 1.5rem;
-}
+
 
 
 /*--------------------------------------------------------------
 3.0 - GENERIC
 -------------------------------------------------------------- */
+
+* {
+	color: #FFF;
+	font-family: 'Nunito Sans', sans-serif;
+	line-height: 1.5em;
+}
 
 html {
 	background-color: #4B1302;
@@ -70,26 +72,11 @@ html {
 4.0 - ELEMENTS
 -------------------------------------------------------------- */
 
-a {
-	color: #FFF;
-	text-decoration:none;
-}
+/* -- FORMS -- */
 
-a:hover {
-	opacity: 0.6;
-}
-
-header nav {
-	text-align: right;
-}
-
-header nav li {
-	margin-left: 4rem;
-}
-
-header nav a {
-	color: #FFF;
-	font-weight: 800;
+fieldset {
+    border-width: 0px;
+    border-style: none;
 }
 
 /* -- LISTS --*/
@@ -104,6 +91,15 @@ li {
 
 /* -- TYPOGRAPHY -- */ 
 
+a {
+	color: #FFF;
+	text-decoration:none;
+}
+
+a:hover {
+	opacity: 0.6;
+}
+
 h2 {
 	background-color: #4B1302;
 	display: inline;
@@ -115,6 +111,11 @@ h2 {
 
 span {
 	display: none;
+}
+
+blockquote {
+	font-size: 1.5rem;
+	margin-top: .5em;
 }
 
 /*--------------------------------------------------------------
@@ -129,7 +130,68 @@ span {
 6.0 - COMPONENTS
 -------------------------------------------------------------- */
 
+/* -- LAYOUT -- */
+
+header nav {
+	margin-top: 40px;
+}
+
+header nav li {
+	display: inline-block;
+}
+
+#process img {
+	padding: 0 5rem;
+}
+
+body>footer {
+	background-color: #000;
+	padding-top: 2em;
+	margin-top: 3em;
+}
+
+#social li {
+	display: inline-block;
+	margin-right: 2.5rem;
+}
+
+#quote {
+	background: url("../img/bg-diamond.png") no-repeat center;
+	background-size: contain;
+	height: 500px;
+}
+
+#quote>p:first-child {
+	padding-top: 7.75em;
+	margin-top: 3.5em;
+}
+
+@media only screen and (max-width: 1024px and min-width: 768px) {
+	#roasts div.row div {
+		display: table;
+		clear: both;
+	}
+}
+
+/* -- TYPOGRAPHY -- */
+
+#quote>p:first-child, #article, blockquote footer {
+	font-size: 1.25rem;
+}
+
 /* -- HEADER -- */
+header nav {
+	text-align: right;
+}
+
+header nav li {
+	margin-left: 4rem;
+}
+
+header nav a {
+	color: #FFF;
+	font-weight: 800;
+}
 
 #hero {
 	background: url("../img/hero.jpg") no-repeat center;
@@ -185,36 +247,19 @@ span {
 	opacity: 1.0;
 }
 
-/* -- LAYOUT -- */
-
-header nav {
-	margin-top: 40px;
-}
-
-header nav li {
-	display: inline-block;
-}
-
-body>footer {
-	background-color: #000;
-	padding-top: 2em;
-}
-
-#social li {
-	display: inline-block;
-	margin-right: 2.5rem;
-}
 
 /*--------------------------------------------------------------
 7.0 - UTILITIES
 -------------------------------------------------------------- */
+
+/* -- ALIGNMENT -- */
 
 .center  {
 	float: none;
 	margin: 0 auto;
 }
 
-.t-center {
+.txt-center {
 	text-align: center;
 }
 
@@ -227,35 +272,6 @@ body>footer {
 	margin: 5em 0 3em;
 }
 
-#quote {
-	position: relative;
-}
-
-#quote:after {
-	content: "";
-	display: inline-block;
-	border: 2px #FFF solid;
-	width: 250px;
-	height: 250px;
-	transform: rotate(45deg);
-	position: absolute;
-	top: -50px;
-	left: 40%;
-	z-index: -1;
-}
-
-.text-red {
-	color: #CE3939;
-}
-
-.fab:hover {
-	color: #CE3939;
-}
-
-fieldset {
-    border-width: 0px;
-    border-style: none;
-}
 
 @media only screen and (max-width: 768px) {
 	.hide-sm {
@@ -264,12 +280,17 @@ fieldset {
 }
 
 @media only screen and (max-width: 1024px and min-width: 768px) {
-	#roasts div.row div {
-		display: table;
-		clear: both;
-	}
-	
 	.f-right-md {
 		float: right;
 	}
+}
+
+/* -- COLOR -- */
+
+.txt-red {
+	color: #CE3939;
+}
+
+.fab:hover {
+	color: #CE3939;
 }
